# sz-semantics

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  NOTES.md  README.md  config.toml  demo.py  demo1.py  demo2.py  demo3.py  domain.ttl  pyproject.toml  shacl.ttl
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: bearer.yaml  black.yaml  check-development-dependencies.yaml  ci.yml  create-sphinx-documentation.yaml  dependency-scan.yaml  flake8.yaml  isort.yaml  mypy.yaml  pylint.yaml  pytest-darwin.yaml  pytest-linux.yaml  pytest-windows.yaml
data/: get.json
data/open/: export.json  open-sanctions.json
data/strw/: acme_biz.json  corp_home.json  export.json  orcid.json  scopus.json
data/truth/: customers.json  export.json  export.json.cya
src/sz_semantics/: __init__.py  mask.py  sem.py  sz.py  util.py
src/sz_semantics/namespace/: __init__.py
sz_semantics/: __init__.py  mask.py  sem.py  util.py
tests/: __init__.py  test_mask.py  test_sem.py
