[project]

name = "sz_semantics"
description = "Transform JSON output from Senzing SDK for use with graph technologies, semantics, and downstream LLM integrations"

authors = [
    { name = "Paco Nathan", email = "paco@senzing.com" }
]

readme = "README.md"
license = { text = "MIT" }

version = "1.3.3"
requires-python = ">=3.11"

dependencies = [
    "rdflib (>=7.2.1,<8.0.0)",
    "senzing-grpc (==0.5.11)",
]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
]

keywords = [
    "bods",
    "context engineering",
    "data privacy",
    "entity resolution",
    "entity resolved knowledge graph",
    "followthemoney",
    "grpc",
    "information exchange",
    "niem",
    "ontology",
    "rdf",
    "semantic layer",
    "semantics",
    "skos",
    "taxonomy",
    "thesaurus",
    "worldcat",
]


[project.urls]

homepage = "https://github.com/senzing-garage/sz-semantics"
package = "https://pypi.org/project/sz_semantics/"
semantics = "https://github.com/senzing-garage/sz-semantics/wiki/ns"
tutorial = "https://github.com/DerwenAI/cdl-2025-masterclass"


[tool.poetry]

requires-poetry = ">=2.1"


[tool.poetry.group.dev.dependencies]

icecream = "^2.1.8"
pytest = "^8.4.2"
pylint = "^3.3.8"
mypy = "^1.18.2"
types-networkx = "^3.5.0.20250918"
types-grpcio = "^1.0.0.20250914"


[tool.pytest.ini_options]

pythonpath = [
    "."
]


[build-system]

requires = [
    "poetry-core>=2.0.0,<3.0.0",
]

build-backend = "poetry.core.masonry.api"
