[project]

name = "sz_semantics"
description = "Transform JSON output from Senzing SDK for use with graph technologies, semantics, and downstream LLM integrations"

authors = [{ name = "Paco Nathan", email = "paco@senzing.com" }]

readme = "README.md"
license = "Apache-2.0"
license-files = [
  "LICENSE",
  ".github/senzing-corporate-contributor-license-agreement.pdf",
  ".github/senzing-individual-contributor-license-agreement.pdf",
]

version = "1.3.3"
requires-python = ">=3.11"

dependencies = ["rdflib (>=7.2.1,<8.0.0)", "senzing-grpc (==0.5.11)"]

classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Human Machine Interfaces",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Indexing",
]

keywords = [
  "bods",
  "context engineering",
  "data privacy",
  "entity resolution",
  "entity resolved knowledge graph",
  "followthemoney",
  "grpc",
  "information exchange",
  "niem",
  "ontology",
  "rdf",
  "semantic layer",
  "semantics",
  "skos",
  "taxonomy",
  "thesaurus",
  "worldcat",
]


[project.urls]

homepage = "https://github.com/senzing-garage/sz-semantics"
package = "https://pypi.org/project/sz_semantics/"
semantics = "https://github.com/senzing-garage/sz-semantics/wiki/ns"
tutorial = "https://github.com/DerwenAI/cdl-2025-masterclass"

[dependency-groups]
all = [
  { include-group = "development" },
  { include-group = "documentation" },
  { include-group = "lint" },
  { include-group = "test" },
]
development = [
  "build==1.3.0",
  "coverage==7.10.7",
  "cryptography==46.0.3",
  "icecream==2.1.8",
  "psutil==7.1.3",
  "pytest-cov==7.0.0",
  "pytest-schema==0.1.2",
  "pytest==8.4.2",
  "twine==6.2.0",
  "types-networkx==3.5.0.20250918",
  "types-grpcio==1.0.0.20250914",
  "virtualenv==20.35.4",
  "wheel==0.46.1",
]
documentation = [
  "autodocsumm==0.2.14; python_version > '3.11'",
  "myst_parser==4.0.1; python_version > '3.11'",
  "sphinx==8.2.3; python_version > '3.11'",
  "sphinx-autodoc-typehints==3.1.0; python_version > '3.11'",
  "sphinx-gallery==0.19.0; python_version > '3.11'",
  "sphinx-jinja2-compat==0.4.1; python_version > '3.11'",
  "sphinx-prompt==1.9.0; python_version > '3.11'",
  "sphinx-rtd-theme==3.0.2; python_version > '3.11'",
  "sphinx-tabs==3.4.*; python_version > '3.11'",
  "sphinx-toolbox==4.0.0; python_version > '3.11'",
  "sphinxcontrib-applehelp==2.0.0; python_version > '3.11'",
  "sphinxcontrib-devhelp==2.0.0; python_version > '3.11'",
  "sphinxcontrib-htmlhelp==2.1.0; python_version > '3.11'",
  "sphinxcontrib-jquery==4.1; python_version > '3.11'",
  "sphinxcontrib-jsmath==1.0.1; python_version > '3.11'",
  "sphinxcontrib-qthelp==2.0.0; python_version > '3.11'",
  "sphinxcontrib-serializinghtml==2.0.0; python_version > '3.11'",
  "sphinxext-remoteliteralinclude==0.6.0; python_version > '3.11'",
]
lint = [
  "bandit==1.8.6",
  "black==25.11.0",
  "flake8==7.3.0",
  "isort==6.1.0",
  "mypy==1.18.2",
  "pylint==3.3.9",
  "pylint-per-file-ignores==2.0.3",
]
test = ["pytest==8.4.2", "coverage==7.10.7"]


[tool.poetry]

requires-poetry = ">=2.1"


[tool.poetry.group.dev.dependencies]

icecream = "^2.1.8"
pytest = "^8.4.2"
pylint = "^3.3.9"
mypy = "^1.18.2"
types-networkx = "^3.5.0.20250918"
types-grpcio = "^1.0.0.20250914"


[tool.pytest.ini_options]

pythonpath = ["."]


[build-system]

requires = ["poetry-core>=2.0.0,<3.0.0"]

build-backend = "poetry.core.masonry.api"
